Fixed dropdown menu cut off

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ h2 {
 /* Header styles */
 .navbar-dark .navbar-nav .nav-link {
   color: white !important;
+  z-index: 100;
 }
 
 header {
@@ -38,7 +39,6 @@ header {
   width: 100%;
   z-index: 100;
   height: 60px;
-  overflow: hidden; /* This is needed to apply the border radius to the inner elements */
 }
 
 header nav a {
@@ -743,21 +743,21 @@ p {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1200px) {
   header {
-    height: 80px;
+    height: 10%;
   }
 
   section {
     flex-direction: column;
-    height: calc(100vh - 80px);
-    gap: 20vh;
-    scroll-margin-top: 80px;
+    height: 90%;
+    gap: 20%;
+    scroll-margin-top: 10%;
   }
 
   section::before {
-    height: 80px;
-    margin: -80px 0 0;
+    height: 10%;
+    margin: -10% 0 0;
   }
 
   h1,
